// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LimitCustomMarketPriceButton > renders the custom amount correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: unset;
}

.c1 {
  width: unset;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: flex-start;
  gap: 1px;
}

.c3 {
  letter-spacing: -0.01em;
}

.c2 {
  color: #131313;
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(19, 19, 19, 0.08);
  border-radius: 999px 0px 0px 999px;
  border-top: 1px solid rgba(19, 19, 19, 0.08);
  border-bottom: 1px solid rgba(19, 19, 19, 0.08);
  border-left: 1px solid rgba(19, 19, 19, 0.08);
  border-right: 0px;
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c2 :hover {
  opacity: 0.6;
}

.c2 :active {
  opacity: 0.4;
}

.c4 {
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
  background-color: rgba(19, 19, 19, 0.08);
  color: rgba(19, 19, 19, 0.63);
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 6px 6px 6px 4px;
  height: 28px;
  border-radius: 0px 999px 999px 0px;
  border-top: 1px solid rgba(19, 19, 19, 0.08);
  border-bottom: 1px solid rgba(19, 19, 19, 0.08);
  border-right: 1px solid rgba(19, 19, 19, 0.08);
  border-left: 1px solid transparent;
}

.c4 :hover {
  opacity: 0.6;
}

.c4 :active {
  opacity: 0.4;
}

<span
  class=""
  style="display: contents;"
>
  <div
    class="c0 c1"
    gap="1px"
    width="unset"
  >
    <button
      class="c2"
    >
      <div
        class="c3 css-1guhfcl"
      >
        +
        10%
      </div>
    </button>
    <button
      class="c4"
    >
      <svg
        fill="none"
        stroke-width="8"
        style="width: 16px; height: 16px; color: currentColor;"
        viewBox="0 0 16 16"
      >
        <path
          d="M12.5303 4.53033C12.8232 4.23744 12.8232 3.76256 12.5303 3.46967C12.2374 3.17678 11.7626 3.17678 11.4697 3.46967L12.5303 4.53033ZM3.46967 11.4697C3.17678 11.7626 3.17678 12.2374 3.46967 12.5303C3.76256 12.8232 4.23744 12.8232 4.53033 12.5303L3.46967 11.4697ZM4.53033 3.46967C4.23744 3.17678 3.76256 3.17678 3.46967 3.46967C3.17678 3.76256 3.17678 4.23744 3.46967 4.53033L4.53033 3.46967ZM11.4697 12.5303C11.7626 12.8232 12.2374 12.8232 12.5303 12.5303C12.8232 12.2374 12.8232 11.7626 12.5303 11.4697L11.4697 12.5303ZM11.4697 3.46967L3.46967 11.4697L4.53033 12.5303L12.5303 4.53033L11.4697 3.46967ZM3.46967 4.53033L11.4697 12.5303L12.5303 11.4697L4.53033 3.46967L3.46967 4.53033Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitCustomMarketPriceButton > renders the custom amount correctly, negative change 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: unset;
}

.c1 {
  width: unset;
  display: flex;
  padding: 0;
  align-items: center;
  justify-content: flex-start;
  gap: 1px;
}

.c3 {
  letter-spacing: -0.01em;
}

.c2 {
  color: #131313;
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(19, 19, 19, 0.08);
  border-radius: 999px 0px 0px 999px;
  border-top: 1px solid rgba(19, 19, 19, 0.08);
  border-bottom: 1px solid rgba(19, 19, 19, 0.08);
  border-left: 1px solid rgba(19, 19, 19, 0.08);
  border-right: 0px;
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c2 :hover {
  opacity: 0.6;
}

.c2 :active {
  opacity: 0.4;
}

.c4 {
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
  background-color: rgba(19, 19, 19, 0.08);
  color: rgba(19, 19, 19, 0.63);
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 6px 6px 6px 4px;
  height: 28px;
  border-radius: 0px 999px 999px 0px;
  border-top: 1px solid rgba(19, 19, 19, 0.08);
  border-bottom: 1px solid rgba(19, 19, 19, 0.08);
  border-right: 1px solid rgba(19, 19, 19, 0.08);
  border-left: 1px solid transparent;
}

.c4 :hover {
  opacity: 0.6;
}

.c4 :active {
  opacity: 0.4;
}

<span
  class=""
  style="display: contents;"
>
  <div
    class="c0 c1"
    gap="1px"
    width="unset"
  >
    <button
      class="c2"
    >
      <div
        class="c3 css-1guhfcl"
      >
        -10.00%
      </div>
    </button>
    <button
      class="c4"
    >
      <svg
        fill="none"
        stroke-width="8"
        style="width: 16px; height: 16px; color: currentColor;"
        viewBox="0 0 16 16"
      >
        <path
          d="M12.5303 4.53033C12.8232 4.23744 12.8232 3.76256 12.5303 3.46967C12.2374 3.17678 11.7626 3.17678 11.4697 3.46967L12.5303 4.53033ZM3.46967 11.4697C3.17678 11.7626 3.17678 12.2374 3.46967 12.5303C3.76256 12.8232 4.23744 12.8232 4.53033 12.5303L3.46967 11.4697ZM4.53033 3.46967C4.23744 3.17678 3.76256 3.17678 3.46967 3.46967C3.17678 3.76256 3.17678 4.23744 3.46967 4.53033L4.53033 3.46967ZM11.4697 12.5303C11.7626 12.8232 12.2374 12.8232 12.5303 12.5303C12.8232 12.2374 12.8232 11.7626 12.5303 11.4697L11.4697 12.5303ZM11.4697 3.46967L3.46967 11.4697L4.53033 12.5303L12.5303 4.53033L11.4697 3.46967ZM3.46967 4.53033L11.4697 12.5303L12.5303 11.4697L4.53033 3.46967L3.46967 4.53033Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitPresetPriceButton > renders %p correctly, disabled %p and selected %p 0 false false 1`] = `
.c1 {
  letter-spacing: -0.01em;
}

.c0 {
  color: rgba(19, 19, 19, 0.63);
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: unset;
  border-radius: 999px;
  border: 1px solid rgba(19, 19, 19, 0.08);
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c0 :hover {
  opacity: 0.6;
}

.c0 :active {
  opacity: 0.4;
}

<span
  class=""
  style="display: contents;"
>
  <button
    class="c0"
  >
    <div
      class="c1 css-1guhfcl"
    >
      Market
    </div>
  </button>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitPresetPriceButton > renders %p correctly, disabled %p and selected %p 0 false true 1`] = `
.c1 {
  letter-spacing: -0.01em;
}

.c0 {
  color: #131313;
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(19, 19, 19, 0.08);
  border-radius: 999px;
  border: 1px solid rgba(19, 19, 19, 0.08);
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c0 :hover {
  opacity: 0.6;
}

.c0 :active {
  opacity: 0.4;
}

<span
  class=""
  style="display: contents;"
>
  <button
    class="c0"
  >
    <div
      class="c1 css-1guhfcl"
    >
      Market
    </div>
  </button>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitPresetPriceButton > renders %p correctly, disabled %p and selected %p 0 true false 1`] = `
.c1 {
  letter-spacing: -0.01em;
}

.c0 {
  color: rgba(19, 19, 19, 0.63);
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: unset;
  border-radius: 999px;
  border: 1px solid rgba(19, 19, 19, 0.08);
}

<span
  class=""
  style="display: contents;"
>
  <button
    class="c0"
  >
    <div
      class="c1 css-1guhfcl"
    >
      Market
    </div>
  </button>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitPresetPriceButton > renders %p correctly, disabled %p and selected %p 5 false true 1`] = `
.c1 {
  letter-spacing: -0.01em;
}

.c0 {
  color: #131313;
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(19, 19, 19, 0.08);
  border-radius: 999px;
  border: 1px solid rgba(19, 19, 19, 0.08);
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c0 :hover {
  opacity: 0.6;
}

.c0 :active {
  opacity: 0.4;
}

<span
  class=""
  style="display: contents;"
>
  <button
    class="c0"
  >
    <div
      class="c1 css-1guhfcl"
    >
      +
      5%
    </div>
  </button>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitPresetPriceButton > renders %p correctly, disabled %p and selected %p 5 true false 1`] = `
.c1 {
  letter-spacing: -0.01em;
}

.c0 {
  color: rgba(19, 19, 19, 0.63);
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: unset;
  border-radius: 999px;
  border: 1px solid rgba(19, 19, 19, 0.08);
}

<span
  class=""
  style="display: contents;"
>
  <button
    class="c0"
  >
    <div
      class="c1 css-1guhfcl"
    >
      +
      5%
    </div>
  </button>
  <div
    style="display: contents;"
  />
</span>
`;

exports[`LimitPresetPriceButton > renders %p correctly, disabled %p and selected %p 10 false true 1`] = `
.c1 {
  letter-spacing: -0.01em;
}

.c0 {
  color: #131313;
  padding: 2px 8px;
  height: 28px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(19, 19, 19, 0.08);
  border-radius: 999px;
  border: 1px solid rgba(19, 19, 19, 0.08);
  text-decoration: none;
  cursor: pointer;
  transition-duration: 125ms;
}

.c0 :hover {
  opacity: 0.6;
}

.c0 :active {
  opacity: 0.4;
}

<span
  class=""
  style="display: contents;"
>
  <button
    class="c0"
  >
    <div
      class="c1 css-1guhfcl"
    >
      +
      10%
    </div>
  </button>
  <div
    style="display: contents;"
  />
</span>
`;
